--- a/frontend/views/chat1.handlebars
+++ b/frontend/views/chat1.handlebars
@@ -15,10 +15,10 @@
     <div class="online">
       <h3 class="title">Online <span>(+5)</span></h3>
       <div class="online-ids">
-        <img src="./style/images/avatar_1.png" alt="avatar1" />
-        <img src="./style/images/avatar_2.png" alt="avatar1" />
-        <img src="./style/images/avatar_3.jpg" alt="avatar1" />
-        <img src="./style/images/avatar_4.jpg" alt="avatar1" />
+        <img src="./public/style/images/avatar_1.png" alt="avatar1" />
+        <img src="./public/style/images/avatar_2.png" alt="avatar1" />
+        <img src="./public/style/images/avatar_3.jpg" alt="avatar1" />
+        <img src="./public/style/images/avatar_4.jpg" alt="avatar1" />
 
       </div>
     </div>
@@ -28,7 +28,7 @@
       <h3 class="title">Messages <span>(+15)</span></h3>
       <div class="recents active">
         <div class="recent-img">
-          <img src="./style/images/avatar_1.png" alt="" />
+          <img src="./public/style/images/avatar_1.png" alt="" />
         </div>
         <div class="recent-data">
           <h3>Sia David</h3>
@@ -37,7 +37,7 @@
       </div>
       <div class="recents">
         <div class="recent-img">
-          <img src="./style/images/avatar_2.png" alt="" />
+          <img src="./public/style/images/avatar_2.png" alt="" />
         </div>
         <div class="recent-data">
           <h3>Sammy Young</h3>
@@ -46,7 +46,7 @@
       </div>
       <div class="recents">
         <div class="recent-img">
-          <img src="./style/images/avatar_3.jpg" alt="" />
+          <img src="./public/style/images/avatar_3.jpg" alt="" />
         </div>
         <div class="recent-data">
           <h3>Katty Messie</h3>
@@ -55,7 +55,7 @@
       </div>
       <div class="recents">
         <div class="recent-img">
-          <img src="./style/images/avatar_4.jpg" alt="" />
+          <img src="./public/style/images/avatar_4.jpg" alt="" />
         </div>
         <div class="recent-data">
           <h3>Michelle Burdman</h3>
@@ -65,7 +65,7 @@
 
       <div class="recents">
         <div class="recent-img">
-          <img src="./style/images/avatar_5.png" alt="" />
+          <img src="./public/style/images/avatar_5.png" alt="" />
         </div>
         <div class="recent-data">
           <h3>Samuel Jim</h3>
