--- a/frontend/views/login.handlebars
+++ b/frontend/views/login.handlebars
@@ -57,9 +57,7 @@
     <div class="panel left-panel">
       <div class="content">
         <h3>Already have an account?</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit dolore
-          veritatis expedita dolor ipsam voluptas nulla, deleniti doloribus
-          cumque?</p>
+        <p>Sign in and start catching up!</p>
         <button class="btn" id="signInBtn">Sign in</button>
       </div>
       <img
@@ -71,9 +69,7 @@
     <div class="panel right-panel">
       <div class="content">
         <h3>New to CatchUp?</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit dolore
-          veritatis expedita dolor ipsam voluptas nulla, deleniti doloribus
-          cumque?</p>
+        <p>Sign up below! CatchUp is free and fun, invite your friends!</p>
         <button class="btn" id="signUpBtn">Sign up</button>
       </div>
       <img
